Working on styling and text

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <title>Ebenwalk</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/the-big-picture.css" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Arvo|Asul:400,700" rel="stylesheet">
 
   </head>
 
@@ -56,8 +58,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h1 class="mt-5">Welcome,</h1>
-            <p>Let's build something.</p>
+            <h1 class="mt-5">Welcome to Ebenwalk.</h1>
+            <p>My name is Erin and I am a web developer that builds applications in a variety of languages. I have a keen eye for detail and a passion for problem solving. I love making things that are functional and elegant. <br><br>
+              Let's build something.</p>
           </div>
         </div>
       </div>
