Working on adding about page

--- a/about.html
+++ b/about.html
@@ -20,7 +20,6 @@
   </head>
 
   <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
       <div class="container">
@@ -57,7 +56,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h1 class="mt-5">Welcome to Ebenwalk.</h1>
+            <h1 class="mt-5">I'm Erin. Nice to meet you.</h1>
             <p>My name is Erin and I am a web developer that builds applications in a variety of languages. I have a keen eye for detail and a passion for problem solving. I love making things that are functional and elegant. <br><br>
               Let's build something.</p>
           </div>
