Working on about page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+              <a class="nav-link" href="../portfolio/index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -57,8 +57,30 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="mt-5">I'm Erin. Nice to meet you.</h1>
-            <p>My name is Erin and I am a web developer that builds applications in a variety of languages. I have a keen eye for detail and a passion for problem solving. I love making things that are functional and elegant. <br><br>
-              Let's build something.</p>
+            <p>Ebenwalk is the concatenation of my name. I was an awkward child
+              and briefly went through a phase when I chose to go by my middle
+              name, Beth. It quickly became clear that despite my early identity
+              crisis, I was indeed, an “Erin”. Thus my alter-ego, “E-be-n”. Eben
+              Walk, little known to me at the time of creating my profile and
+              website, is actually a sort of seasonal, natural event whereby the
+              Eben Ice Caves are formed in the Hiawatha National Forest in
+              Michigan.<br><br>
+
+              But enough about that. I started learning code a while ago. I was
+              working in a quiet museum digitizing the collection. The software
+              didn’t do exactly what I wanted it to do and my work was seen by
+              only a select few colleagues within the museum. I wanted to fix it
+              and I wanted the museum to be able to share all my work and their
+              collection with the greater public.<br><br>
+
+              I began to tinker, take free courses, read all the books, taking
+              all the courses, attending every webinar, and listening to every
+              podcast I could. I never thought I would like or be good at what I
+              was doing— we didn’t get a family computer till I was like 12 and
+              my parents were the type that thought the internet was hocus-pocus.
+              Yet, here I am. Building things, creating things, developing
+              programs! To check out what I’ve built and what I’ve learned, head
+              on over to my work page.</p>
           </div>
         </div>
       </div>
