About page fixes and resume upload

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
               <a class="nav-link" href="../portfolio/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="../portfolio/images/erinresume.jpg" target="_blank">Resume</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
