--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="../portfolio/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Resume</a>
@@ -57,30 +57,24 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="mt-5">I'm Erin. Nice to meet you.</h1>
-            <p>Ebenwalk is the concatenation of my name. I was an awkward child
-              and briefly went through a phase when I chose to go by my middle
-              name, Beth. It quickly became clear that despite my early identity
-              crisis, I was indeed, an “Erin”. Thus my alter-ego, “E-be-n”. Eben
+            <p>Ebenwalk is the concatenation of my name. Eben
               Walk, little known to me at the time of creating my profile and
               website, is actually a sort of seasonal, natural event whereby the
               Eben Ice Caves are formed in the Hiawatha National Forest in
               Michigan.<br><br>
 
               But enough about that. I started learning code a while ago. I was
-              working in a quiet museum digitizing the collection. The software
+              working in a quiet museum digitizing their collection. The software
               didn’t do exactly what I wanted it to do and my work was seen by
-              only a select few colleagues within the museum. I wanted to fix it
+              only a select few colleagues within the museum. I wanted to fix that
               and I wanted the museum to be able to share all my work and their
               collection with the greater public.<br><br>
 
-              I began to tinker, take free courses, read all the books, taking
-              all the courses, attending every webinar, and listening to every
-              podcast I could. I never thought I would like or be good at what I
-              was doing— we didn’t get a family computer till I was like 12 and
-              my parents were the type that thought the internet was hocus-pocus.
-              Yet, here I am. Building things, creating things, developing
-              programs! To check out what I’ve built and what I’ve learned, head
-              on over to my work page.</p>
+              I began to tinker, read all the books, taking all the courses,
+              attending every webinar, and listening to every podcast I could. I
+              would have never imagined myself here, yet, here I am. Building
+              things, creating applications, developing programs! To check out what
+              I’ve built and what I’ve learned, head on over to my projects page.</p>
           </div>
         </div>
       </div>
