Coloration and styling of nav

--- a/projects.html
+++ b/projects.html
@@ -57,9 +57,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h1 class="mt-5">Welcome to Ebenwalk.</h1>
-            <p>My name is Erin and I am a web developer that builds applications in a variety of languages. I have a keen eye for detail and a passion for problem solving. I love making things that are functional and elegant. <br><br>
-              Let's build something.</p>
+            <h1 class="mt-5">This Page is Currently Under Construction.</h1>
+            <p>But if you're interested in what I'm working on, hop on over to my <a class="link" href="https://github.com/e-be-walk" target="_blank">github</a> page.</p>
           </div>
         </div>
       </div>
