--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="../portfolio/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="../portfolio/projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Resume</a>
