--- a/about.html
+++ b/about.html
@@ -30,18 +30,18 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="../portfolio/index.html">Home
+              <a class="nav-link" href="./index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../portfolio/about.html">About</a>
+              <a class="nav-link" href="./about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../portfolio/projects.html">Projects</a>
+              <a class="nav-link" href="./projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="./images/erinresume.jpg" target="_blank">Resume</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
